Rework the use of completable futures